--- a/src/M2-SPRINT-7/frontend/src/styles/dashboard.css
+++ b/src/M2-SPRINT-7/frontend/src/styles/dashboard.css
@@ -2,7 +2,7 @@
 
 .header{
     background-color: var(--white-default);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     margin-bottom: 3rem;
@@ -79,13 +79,14 @@
 }
 
 .user__not--hired{
-    width: 73.625rem;
+    width: 75rem;
     height: 29.1875rem;
     background-color: var(--grey-background);
     border: 1px solid #A8A8A8;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .not__hired{
@@ -124,6 +125,7 @@
     display: flex;
     justify-content: flex-end;
     font-size: 1.5rem;
+    outline: none;
 }
 
 .edit__user--title{
@@ -148,8 +150,12 @@
     height: 2.5rem;
     outline: none;
     padding-left: 1rem;
-    color: rgba(0, 0, 0, 0.5);
+    color: var(--black-default);
     font-size: 1.125rem;
+}
+
+.input--edit__user::placeholder{
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .button__div{
