--- a/src/M2-SPRINT-7/frontend/src/styles/globalStyles.css
+++ b/src/M2-SPRINT-7/frontend/src/styles/globalStyles.css
@@ -26,6 +26,7 @@ body, textarea{
     text-align: center;
     padding: 1rem;
     animation: toastIn 1s linear;
+    z-index: 1;
 }
 
 .toast__text{
